--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,10 @@ nav a:hover {
 .link:hover {
     color: inherit; /* Change color on hover to inherit from parent element */
 }
+p,h3,h4,li {
+    margin: 0; /* Remove default margins */
+    text-align: justify; /* Justify text to both ends */
+}
 
 footer {
     text-align: center;
