--- a/styles.css
+++ b/styles.css
@@ -1,240 +1,257 @@
 body {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #fff;
-    color: #333;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  color: #333;
 }
 header {
-    background-color: #fff;
-    text-align: center;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  background-color: #fff;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 nav {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  position: relative;
 }
 nav a {
-    margin: 0 20px;
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
+  margin: 0 20px;
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
 }
 nav a:hover {
-    color: #0078d4; /* Microsoft Blue */
+  color: #0078d4; /* Microsoft Blue */
 }
 
 .logo {
-    position: absolute; /* Make the logo text positioned */
-    top: 0; /* Align the text to the top */
-    left: 0; /* Align the text to the right */
-    margin: 10px; /* Add some margin for spacing */
-    color: #333; /* Text color */
-    font-weight: bold; /* Bold font */
-    font-size: 18px; /* Font size */
-    border: 2px solid #333;
-    padding: 5px 10px;
+  position: absolute; /* Make the logo text positioned */
+  top: 0; /* Align the text to the top */
+  left: 0; /* Align the text to the right */
+  margin: 10px; /* Add some margin for spacing */
+  color: #333; /* Text color */
+  font-weight: bold; /* Bold font */
+  font-size: 18px; /* Font size */
+  border: 2px solid #333;
+  padding: 5px 10px;
 }
-
 
 .container {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
 }
 .about-me-card {
-    margin: 20px;
-    display: flex;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  margin: 20px;
+  display: flex;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 .about-me-card img {
-    border-radius: 5%;
-    width: 150px;
-    height: 200px;
-    margin-right: 20px;
+  border-radius: 5%;
+  width: 150px;
+  height: 200px;
+  margin-right: 20px;
 }
 .about-me-text {
-    flex: 1;
+  flex: 1;
 }
 .about-me-text h2 {
-    margin-top: 0;
+  margin-top: 0;
 }
 .social-media-icons {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 .social-media-icons a {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 .social-media-icons img {
-    width: 40px;
-    height: 20px;
+  width: 40px;
+  height: 20px;
 }
 .projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
 }
 .project {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 .project img {
-    width: 100%; /* Ensure image takes up full width of its container */
-    height: 200px; /* Set a fixed height for consistency */
-    object-fit: cover; /* Ensure image covers the entire container while maintaining aspect ratio */
-    border-radius: 5px; /* Add rounded corners for aesthetics */
+  width: 100%; /* Ensure image takes up full width of its container */
+  height: 200px; /* Set a fixed height for consistency */
+  object-fit: cover; /* Ensure image covers the entire container while maintaining aspect ratio */
+  border-radius: 5px; /* Add rounded corners for aesthetics */
 }
 .link {
-    text-decoration: none; /* Remove underline */
-    color: inherit; /* Inherit color from parent element */
+  text-decoration: none; /* Remove underline */
+  color: inherit; /* Inherit color from parent element */
 }
 
 .link:hover {
-    color: inherit; /* Change color on hover to inherit from parent element */
+  color: inherit; /* Change color on hover to inherit from parent element */
 }
-p,h3,h4,li {
-    margin: 0; /* Remove default margins */
-    text-align: justify; /* Justify text to both ends */
+p,
+h3,
+h4,
+li {
+  margin: 0; /* Remove default margins */
+  text-align: justify; /* Justify text to both ends */
 }
 
 footer {
-    text-align: center;
-    background-color: #f4f4f4;
-    padding: 20px;
-    margin-top: 50px;
+  text-align: center;
+  background-color: #f4f4f4;
+  padding: 20px;
+  margin-top: 50px;
 }
-#custom-icon{
-    height: 30px;;
-    width: 25px;
+#custom-icon {
+  height: 30px;
+  width: 25px;
 }
 
 .project-container {
-    max-width: 1060px;
-    margin: 0 auto;
-    padding: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-
+  max-width: 1060px;
+  margin: 0 auto;
+  padding: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 .project-card {
-    margin: 20px;
-    display: flex;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  margin: 20px;
+  display: flex;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 .project-card-SC {
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 .project-card-SC-container {
-    /* max-width: 60px; */
-    display: flex;
-    /* flex-direction: column; */
-    flex-wrap: wrap;
-    margin: 0 auto;
-    /* padding: 20px; */
+  /* max-width: 60px; */
+  display: flex;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  margin: 0 auto;
+  /* padding: 20px; */
 }
 .project-card-SC-item {
-    display: flex;
-    flex-direction: column;
-    margin:  auto;
-    padding: 20px;
-
-
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 20px;
 }
 .project-card-SC-container-image {
-    width: 350px; 
-    height: 200px; 
-    object-fit: cover; 
+  width: 350px;
+  height: 200px;
+  object-fit: cover;
 }
-#footer{
-    margin: auto;
-    text-align: center;
+#footer {
+  margin: auto;
+  text-align: center;
+}
+
+.download-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  background-color: #007bff; /* Change the background color as needed */
+  border: 2px solid #007bff; /* Change the border color to match background color */
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+}
+
+.download-btn:hover {
+  background-color: #0056b3; /* Change the hover background color */
+  border-color: #0056b3; /* Change the hover border color */
 }
 
 /* responsive  */
 
-
 /* Mobile responsiveness */
 @media only screen and (max-width: 768px) {
-    header {
-        padding: 10px;
-    }
-    nav {
-        margin-top: 10px;
-    }
-    nav a {
-        margin: 0 10px;
-    }
-    .logo {
-        font-size: 16px;
-        padding: 5px 8px;
-        margin: 5px;
-    }
-    .container {
-        padding: 10px;
-    }
-    .about-me-card {
-        flex-direction: column;
-        align-items: center;
-    }
-    .about-me-card img {
-        width: 120px;
-        height: 160px;
-        margin-right: 0;
-        margin-bottom: 10px;
-    }
-    .about-me-text {
-        text-align: center;
-        padding: 0;
-    }
-    .social-media-icons {
-        margin-top: 10px;
-    }
-    .social-media-icons img {
-        width: 30px;
-        height: auto;
-    }
-    .projects {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-gap: 10px;
-    }
-    .project img {
-        height: 150px;
-        border-radius: 5px;
-    }
-    footer {
-        padding: 10px;
-    }
+  header {
+    padding: 10px;
+  }
+  nav {
+    margin-top: 10px;
+  }
+  nav a {
+    margin: 0 10px;
+  }
+  .logo {
+    font-size: 16px;
+    padding: 5px 8px;
+    margin: 5px;
+  }
+  .container {
+    padding: 10px;
+  }
+  .about-me-card {
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-me-card img {
+    width: 120px;
+    height: 160px;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .about-me-text {
+    text-align: center;
+    padding: 0;
+  }
+  .social-media-icons {
+    margin-top: 10px;
+  }
+  .social-media-icons img {
+    width: 30px;
+    height: auto;
+  }
+  .projects {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 10px;
+  }
+  .project img {
+    height: 150px;
+    border-radius: 5px;
+  }
+  footer {
+    padding: 10px;
+  }
 }
 
 /* Tablet responsiveness */
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
-    .container {
-        max-width: 90%;
-    }
-    .project {
-        padding: 15px;
-    }
+  .container {
+    max-width: 90%;
+  }
+  .project {
+    padding: 15px;
+  }
 }
 
 /* Large desktop responsiveness */
 @media only screen and (min-width: 1025px) {
-    .container {
-        max-width: 1060px;
-    }
+  .container {
+    max-width: 1060px;
+  }
 }
