--- a/styles.css
+++ b/styles.css
@@ -67,13 +67,35 @@ nav a:hover {
 .social-media-icons {
   margin-top: 20px;
 }
-.social-media-icons a {
+.social-media {
+  display: flex;
   margin-right: 10px;
+  margin-top: 20px;
 }
-.social-media-icons img {
+#custom-icon {
+  height: 30px;
   width: 40px;
-  height: 20px;
 }
+
+.social-media-icons button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  background-color: #007bff; /* Change the background color as needed */
+  border: 2px solid #007bff; /* Change the border color to match background color */
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+}
+
+.social-media-icons button:hover {
+  background-color: #0056b3; /* Change the hover background color */
+  border-color: #0056b3; /* Change the hover border color */
+}
+
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -112,10 +134,6 @@ footer {
   background-color: #f4f4f4;
   padding: 20px;
   margin-top: 50px;
-}
-#custom-icon {
-  height: 30px;
-  width: 25px;
 }
 
 .project-container {
@@ -163,25 +181,6 @@ footer {
 #footer {
   margin: auto;
   text-align: center;
-}
-
-.download-btn {
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #fff;
-  background-color: #007bff; /* Change the background color as needed */
-  border: 2px solid #007bff; /* Change the border color to match background color */
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
-}
-
-.download-btn:hover {
-  background-color: #0056b3; /* Change the hover background color */
-  border-color: #0056b3; /* Change the hover border color */
 }
 
 /* responsive  */
