--- a/styles.css
+++ b/styles.css
@@ -254,3 +254,21 @@ footer {
     max-width: 1060px;
   }
 }
+
+/* For mobile devices */
+@media only screen and (max-width: 600px) {
+  .project-card-SC-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .project-card-SC-item {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .project-card-SC-item img {
+    width: 100%;
+  }
+}
